--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     </head>
     <body>
         
+<header class="header">
+    some text...
+</header>
+
+
+
+
+
         
     </body>
 </html>
