--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        
+        <!--=======================================================main header===================================================== -->
 <header class="header">
-    some text...
+    <div class="logo-box">
+        <img src="./images/logo-white.png" alt="logo" class="logo">
+    </div>
+    <div class="text-box">
+        <h1 class="heading-primary">
+            <span class="heading-primary-main">Outdoors</span>
+            <span class="heading-primary-sub">is where life happens</span>
+        </h1>
+    </div>
+    
+
+
 </header>
 
 
