section 2 of building the about page.  added  heading and filler paragraph. also custom button and styles

--- a/index.html
+++ b/index.html
@@ -58,14 +58,18 @@
 </section> -->
 <main>
     <section class="section-about">
-        <div class="u-center-text u margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
                  Exciting Tours for adventurous people
             </h2>
         </div>
         <div class="row">
             <div class="col-1-of-2">
-                Text content
+                <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque consequuntur mollitia exercitationem excepturi aliquid commodi quod fugit accusamus minima, perferendis necessitatibus libero quis nulla eligendi reiciendis animi vero sint aliquam?</p>
+                <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia amet quo mollitia! Odit earum totam sapiente architecto adipisci distinctio, id optio quibusdam obcaecati nesciunt fuga, corporis dolorem maiores fugiat perferendis.</p>
+                <a href="#" class="btn-text">Learn more &rarr;</a>
             </div>
             <div class="col-1-of-2">
                 image composition
