--- a/index.html
+++ b/index.html
@@ -196,6 +196,24 @@
                     <a href="#" class=" btn btn--green">Discover all tours</a>
                 </div>
             </section>
+            <section class="section-stories">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="images/nat-8.jpg" alt="Person on a tour" class="story__image">
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small ">I had the best week ever with my family</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione corrupti numquam quisquam sequi doloribus nam, porro molestiae odit repellendus ea, iste at saepe quia facilis impedit omnis vel. Dignissimos, qui!</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
