--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="images/nat-8.jpg" alt="Person on a tour" class="story__image">
+                            <figcaption class="story__caption"> Ashley Smith </figcaption>
                         </figure>
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small ">I had the best week ever with my family</h3>
@@ -213,6 +214,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                        <div class="story">
+                            <figure class="story__shape">
+                                <img src="images/nat-9.jpg" alt="Person on a tour" class="story__image">
+                                <figcaption class="story__caption"> john Smith </figcaption>
+                            </figure>
+                            <div class="story__text">
+                                <h3 class="heading-tertiary u-margin-bottom-small ">Wow!! My life is completely different now.</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ad blanditiis, excepturi culpa repellat beatae id facilis quisquam sit quasi maiores officia. Magni recusandae excepturi, velit ad minima doloremque animi!</p>
+                            </div>
+                        </div>
+                    </div>
             </section>
         </main>
     </body>
