--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        <!--=======================================================main header===================================================== -->
+        <!--======================================================= main header =====================================================-->
+
         <header class="header">
             <div class="header__logo-box">
                 <img src="./images/logo-white.png" alt="logo" class="header__logo">
@@ -50,6 +51,7 @@
                     </div>
                 </div>
             </section>
+            <!-- ================================================= Features Section ================================================== -->
 
             <section class="section-features">
 
@@ -92,7 +94,7 @@
                     </h2>
                 </div>
                 <div class="row">
-                      <!--====================== The Sea Explorer =====================-->
+                      <!--======================================= The Sea Explorer =====================================================-->
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
@@ -125,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--====================== The Forest Hiker=====================-->
+                    <!--=========================================== The Forest Hiker ====================================================-->
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
@@ -158,7 +160,7 @@
                             </div>
                         </div>
                     </div>
-                      <!--====================== The Snow Adventurer =====================-->
+                      <!--======================================= The Snow Adventurer ================================================-->
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
@@ -196,7 +198,7 @@
                     <a href="#" class=" btn btn--green">Discover all tours</a>
                 </div>
             </section>
-            <!--================================ Stories section =================================== -->
+            <!--============================================== Stories section =============================================== -->
             <section class="section-stories">
                 <div class="bg-video">
                     <video  class="bg-video__content" autoplay muted loop>
@@ -239,6 +241,8 @@
                             <a href="#" class="btn-text">Read all stories &rarr;</a>
                     </div>
             </section>
+            <!-- =========================================== Booking Section ============================================== -->
+
             <section class="section-book">
                 <div class="row">
                     <div class="book">
@@ -253,10 +257,30 @@
                                     <input type="text" class="form__input" placeholder="Full Name" id="name" required>
                                     <label for="name" class="form__label">Full Name</label>
                                 </div>
+        
                                 <div class="form__group">
-                                        <input type="email" class="form__input" placeholder="Email address" id="email" required>
-                                        <label for="email" class="form__label">Email Address</label>
+                                    <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                                    <label for="email" class="form__label">Email Address</label>
+                                 </div>
+
+                                <div class="form__group u-margin-bottom-medium">
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="small" name="size">
+                                        <label for="small" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Small tour group</label>
                                     </div>
+                                    
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="large"name="size">
+                                        <label for="large" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Large tour group</label>
+                                    </div>
+                                </div>
+                                <div class="form__group">
+                                    <button class="btn btn--green">Next Step &rarr;</button>
+                                </div>
                             </form>
                         </div>
                     </div>
