--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        <!--======================================================= main header =====================================================-->
+        <!--======================================= Navigation ========================================================-->
+        <div class="navitagion">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+            <label for="navi-toggle" class="navigation__button">Menu</label>
+
+            <div class="navigation__background">&nbsp;</div>
+
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="#" class="navigation__link"></a>About Natours</li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"></a>Your benfits</li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"></a>Popular tours</li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"></a>Stories</li>
+                    <li class="navigation__item"><a href="" class="navigation__link"></a>Book now</li>
+
+
+                </ul>
+            </nav>
+        </div>
+        <!--======================================= main header=========================================================-->
 
         <header class="header">
             <div class="header__logo-box">
