--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="#" class="navigation__link"></a>About Natours</li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"></a>Your benfits</li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"></a>Popular tours</li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"></a>Stories</li>
-                    <li class="navigation__item"><a href="" class="navigation__link"></a>Book now</li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">About Natours</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">Your benfits</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">Popular tours</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
+                    <li class="navigation__item"><a href="" class="navigation__link">Book now</a></li>
 
 
                 </ul>
